update figure paths.

--- a/continuumAndOtherTransformersCore.tex
+++ b/continuumAndOtherTransformersCore.tex
@@ -8,7 +8,7 @@
 
 A non-discrete impedance matching transformation, as sketched in \cref{fig:taperedLines:taperedLinesFig1}, is also possible.
 
-\imageFigure{../../figures/ece1236/taperedLinesFig1}{Tapered impedance matching.}{fig:taperedLines:taperedLinesFig1}{0.2}
+\imageFigure{../figures/ece1236-microwaves/taperedLinesFig1}{Tapered impedance matching.}{fig:taperedLines:taperedLinesFig1}{0.2}
 
 \begin{equation}\label{eqn:continuumAndOtherTransformersCore:820}
 \Delta \Gamma
@@ -30,7 +30,7 @@ d\Gamma
 
 Hence as we did for multisection transformers, associate \( \Delta \Gamma \) with \( e^{- 2j \beta z} \) as sketched in \cref{fig:taperedLines:taperedLinesFig2}.
 
-\imageFigure{../../figures/ece1236/taperedLinesFig2}{Reflection coefficient over an interval}{fig:taperedLines:taperedLinesFig2}{0.15}
+\imageFigure{../figures/ece1236-microwaves/taperedLinesFig2}{Reflection coefficient over an interval}{fig:taperedLines:taperedLinesFig2}{0.15}
 
 assuming small reflections (i.e. \( Z(z) \) is a slowly varying (adiabatic).  Then
 
@@ -106,7 +106,7 @@ or
 
 This is sketched in \cref{fig:taperedLines:taperedLinesFig3}.
 
-\imageFigure{../../figures/ece1236/taperedLinesFig3}{Exponential taper reflection coefficient.}{fig:taperedLines:taperedLinesFig3}{0.2}
+\imageFigure{../figures/ece1236-microwaves/taperedLinesFig3}{Exponential taper reflection coefficient.}{fig:taperedLines:taperedLinesFig3}{0.2}
 
 Want:
 
@@ -156,7 +156,7 @@ In this case
 
 Compared to the exponential taper \( \sinc( \beta L ) \) for the \( \beta L > 2 \pi \) the peaks of \( \Abs{\Gamma} \) are lower, but the first null occurs at \( \beta L = 2 \pi \) whereas for the exponential taper it occurs at \( \beta L = \pi \).  This is sketched in \cref{fig:taperedLines:taperedLinesFig4}.  The price to pay for this is that the zero is at \( 2 \pi \) so we have to make it twice as long to get the ripple down.
 
-\imageFigure{../../figures/ece1236/taperedLinesFig4}{Triangular taper impedance curve.}{fig:taperedLines:taperedLinesFig4}{0.2}
+\imageFigure{../figures/ece1236-microwaves/taperedLinesFig4}{Triangular taper impedance curve.}{fig:taperedLines:taperedLinesFig4}{0.2}
 
 \paragraph{Klopfenstein Taper}
 \index{Klopfenstein taper}
