--- a/uwavesDeck2WaveEquationCore.tex
+++ b/uwavesDeck2WaveEquationCore.tex
@@ -244,7 +244,7 @@ Z_0 &\leftrightarrow \eta
 \end{equation}
 \item \( \BE, \BH \) are orthogonal to each other as sketched in \cref{fig:deck2Waves:deck2WavesFig1}.
 
-\imageFigure{../../figures/ece1236/deck2WavesFig1}{Transverse electric and magnetic propagation.}{fig:deck2Waves:deck2WavesFig1}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck2WavesFig1}{Transverse electric and magnetic propagation.}{fig:deck2Waves:deck2WavesFig1}{0.2}
 \end{itemize}
 
 \section{Time harmonic fields}
@@ -287,7 +287,7 @@ If the response to a time harmonic signal \( e^{j \omega t} \) is known then the
 \cref{fig:deck2Waves:deck2WavesFig2}
 where the waveform input is \( f(t) = \inv{2 \pi} \int_{-\infty}^\infty \tilde{f}(\omega) e^{j \omega t} dt \) and the waveform output is \( \inv{2 \pi} \int_{-\infty}^\infty \tilde{f}(\omega) G(\omega) e^{j \omega t} dt \)
 
-\imageFigure{../../figures/ece1236/deck2WavesFig2}{System frequency response.}{fig:deck2Waves:deck2WavesFig2}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck2WavesFig2}{System frequency response.}{fig:deck2Waves:deck2WavesFig2}{0.2}
 
 If the fields are known in phasor form \( \BE(\Br, \omega ) \) then the response to an arbitrary signal with spectrum \( \tilde{f}(\omega) \) is
 
@@ -378,7 +378,7 @@ H_x(z) &= \frac{E_0^{+}}{\eta} e^{-j k z }.
 
 The peak velocity of either the electric or magnetic fields travels with the phase velocity as sketched in \cref{fig:deck2Waves:deck2WavesFig3}.
 
-\imageFigure{../../figures/ece1236/deck2WavesFig3}{Phase velocity propagation.}{fig:deck2Waves:deck2WavesFig3}{0.3}
+\imageFigure{../figures/ece1236-microwaves/deck2WavesFig3}{Phase velocity propagation.}{fig:deck2Waves:deck2WavesFig3}{0.3}
 
 \paragraph{Plane waves}
 \index{plane wave}
@@ -403,7 +403,7 @@ At a fixed time \( t \), the locus of the points with the same phase is given by
 
 \( \beta z = \textrm{constant} \) describes planes perpendicular to the \( z \) axis, as sketched in \cref{fig:deck2Waves:deck2WavesFig4}.
 
-\imageFigure{../../figures/ece1236/deck2WavesFig4}{Equiphase surfaces.}{fig:deck2Waves:deck2WavesFig4}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck2WavesFig4}{Equiphase surfaces.}{fig:deck2Waves:deck2WavesFig4}{0.2}
 
 Notes
 
@@ -452,7 +452,7 @@ These can be combined to give
 
 Consider a volume V, surrounded by a closed surface S as sketched in \cref{fig:deck2Waves:deck2WavesFig5}.
 
-\imageFigure{../../figures/ece1236/deck2WavesFig5}{Poynting volume.}{fig:deck2Waves:deck2WavesFig5}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck2WavesFig5}{Poynting volume.}{fig:deck2Waves:deck2WavesFig5}{0.2}
 
 \index{instantaneous power density}
 The instantaneous power density outflowing the surfaces S s given by the Poynting vector
@@ -506,7 +506,7 @@ P = \inv{2} \oint \Real\lr{ \BE \cross \BH^\conj } \cdot d\BS.
 
 Consider again a volume V enclosed in a surface S.  Assume that electric currents may exist in V and that V is filled with a material characterized by \( \epsilon, \mu \) and a conductivity \( \sigma \), where \( \epsilon = \epsilon' -j \epsilon'' \), and \( \mu = \mu' - j \mu'' \) as illustrate in \cref{fig:deck2Waves:deck2WavesFig6}.
 
-\imageFigure{../../figures/ece1236/deck2WavesFig6}{Poynting volume with sources.}{fig:deck2Waves:deck2WavesFig6}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck2WavesFig6}{Poynting volume with sources.}{fig:deck2Waves:deck2WavesFig6}{0.2}
 
 From Faraday's law \( \spacegrad \cross \BE = - j \omega \mu \BH \), and Ampere's law
 \( \spacegrad \cross \BH = \BJ + j \omega \epsilon \BE \), we have
