--- a/uwavesDeck3PlaneWavesLossyMaterialCore.tex
+++ b/uwavesDeck3PlaneWavesLossyMaterialCore.tex
@@ -130,7 +130,7 @@ or
 
 This is sketched in \cref{fig:deck3Lossy:deck3LossyFig1}.
 
-\imageFigure{../../figures/ece1236/deck3LossyFig1}{Skin depth.}{fig:deck3Lossy:deck3LossyFig1}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck3LossyFig1}{Skin depth.}{fig:deck3Lossy:deck3LossyFig1}{0.2}
 
 \paragraph{Low loss dielectrics}
 \index{dielectric!low loss}
@@ -265,7 +265,7 @@ We can conclude that a very thin metallic film can effectively shield RF energy.
 
 At DC the current through a wire flows uniformly throughout the entire cross section of a wire as sketched in \cref{fig:deck3Lossy:deck3LossyFig2}.
 
-\imageFigure{../../figures/ece1236/deck3LossyFig2}{DC current distribution in wire.}{fig:deck3Lossy:deck3LossyFig2}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck3LossyFig2}{DC current distribution in wire.}{fig:deck3Lossy:deck3LossyFig2}{0.2}
 
 The current occupies the entire cross section \( \pi b^2 \), so the DC resistance is
 
@@ -275,7 +275,7 @@ R_{\textrm{DC}} = \inv{\sigma} \frac{l}{\pi b^2}.
 
 However, with RF (like microwave) signals the current only exists effectively within on skin depth, as sketched in \cref{fig:deck3Lossy:deck3LossyFig3}.
 
-\imageFigure{../../figures/ece1236/deck3LossyFig3}{RF current distribution in wire.}{fig:deck3Lossy:deck3LossyFig3}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck3LossyFig3}{RF current distribution in wire.}{fig:deck3Lossy:deck3LossyFig3}{0.2}
 
 therefore the RF resistance is
 
