--- a/uwavesDeck5SmithChartCore.tex
+++ b/uwavesDeck5SmithChartCore.tex
@@ -8,7 +8,7 @@
 
 A short circuited line, also called a shorted stub, is sketched in \cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig1}.
 
-\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig1}{Short circuited line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig1}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig1}{Short circuited line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig1}{0.2}
 
 With
 \begin{equation}\label{eqn:uwavesDeck5SmithChartCore:20}
@@ -63,7 +63,7 @@ This is also the case for short sections of high impedance line.
 
 An open circuited line is sketched in \cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig2}.
 
-\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig2}{Open circuited line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig2}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig2}{Open circuited line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig2}{0.2}
 
 This time with \( Z_\txtL \rightarrow \infty \) we have
 
@@ -102,7 +102,7 @@ This is also the case for short sections of low impedance line.
 
 A half wavelength transmission line equivalent circuit is sketched in \cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig3}.
 
-\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig3}{Half wavelength transmission line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig3}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig3}{Half wavelength transmission line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig3}{0.2}
 
 With \( l = \lambda/2 \)
 
@@ -125,7 +125,7 @@ Z_{\textrm{in}}
 
 A quarter wavelength transmission line equivalent circuit is sketched in \cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig4}.
 
-\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig4}{Quarter wavelength transmission line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig4}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig4}{Quarter wavelength transmission line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig4}{0.2}
 
 With \( l = \lambda/4 \)
 
@@ -170,9 +170,9 @@ See \citep{seriesResonance} for an explanation of the term series resonant.
 
 Matching for a quarter wavelength transmission line equivalent circuit is sketched in \cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig5}.
 
-\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig5}{Quarter wavelength transmission line matching.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig5}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig5}{Quarter wavelength transmission line matching.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig5}{0.2}
 %\cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig6}.
-%\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig6}{CAPTION: deck5smithChartsAndImpedenceTxFig6}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig6}{0.2}
+%\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig6}{CAPTION: deck5smithChartsAndImpedenceTxFig6}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig6}{0.2}
 
 For maximum power transfer
 
@@ -283,16 +283,16 @@ with radius
 
 These circles also pass through the point \( (1,0) \).  These circles are orthogonal to the constant resistance circles.  Some of the features of a Smith chart are sketched in \cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig7}.
 
-\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig7}{Hand sketched Smith chart.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig7}{0.4}
+\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig7}{Hand sketched Smith chart.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig7}{0.4}
 
 A matlab produced blank Smith chart can be found in \cref{fig:smithchart:smithchartFig1}.
 
-\mathImageFigure{../../figures/ece1236/smithchartFig1}{Blank Smith chart.}{fig:smithchart:smithchartFig1}{0.5}{smith:run.m}
+\mathImageFigure{../figures/ece1236-microwaves/smithchartFig1}{Blank Smith chart.}{fig:smithchart:smithchartFig1}{0.5}{smith:run.m}
 
 \makeexample{Perform a transformation along a lossless line.}{example:uwavesDeck5SmithChartCore:680}{
 
 %\cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig8}.
-\imageFigure{../../figures/ece1236/deck5smithChartsAndImpedenceTxFig8}{Impedance transformation along lossless line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig8}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck5smithChartsAndImpedenceTxFig8}{Impedance transformation along lossless line.}{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig8}{0.2}
 
 Given
 
@@ -320,9 +320,9 @@ If \( \Gamma_\txtL = \Abs{\Gamma_\txtL} e^{j \Theta_\txtL } \) is plotted on the
 
 Some worked examples that demonstrate this can be found in \cref{fig:smithChartSlides:smithChartSlidesFig1}, \cref{fig:smithChartSlides:smithChartSlidesFig2}, and \cref{fig:smithChartSlides:smithChartSlidesFig3}.
 
-\imageFigure{../../figures/ece1236/smithChartSlidesFig1}{Mapping an impedance value onto a Smith chart.}{fig:smithChartSlides:smithChartSlidesFig1}{0.5}
-\imageFigure{../../figures/ece1236/smithChartSlidesFig2}{Moving on the Smith chart towards the generator.}{fig:smithChartSlides:smithChartSlidesFig2}{0.5}
-\imageFigure{../../figures/ece1236/smithChartSlidesFig3}{Moving on the Smith chart.}{fig:smithChartSlides:smithChartSlidesFig3}{0.5}
+\imageFigure{../figures/ece1236-microwaves/smithChartSlidesFig1}{Mapping an impedance value onto a Smith chart.}{fig:smithChartSlides:smithChartSlidesFig1}{0.5}
+\imageFigure{../figures/ece1236-microwaves/smithChartSlidesFig2}{Moving on the Smith chart towards the generator.}{fig:smithChartSlides:smithChartSlidesFig2}{0.5}
+\imageFigure{../figures/ece1236-microwaves/smithChartSlidesFig3}{Moving on the Smith chart.}{fig:smithChartSlides:smithChartSlidesFig3}{0.5}
 
 %The class slides do this for a few loads.
 } % example
@@ -332,7 +332,7 @@ Some worked examples that demonstrate this can be found in \cref{fig:smithChartS
 
 Referring to \cref{fig:smithChartSlides:smithChartSlidesFig4}, the procedure for single stub tuning is
 
-\imageFigure{../../figures/ece1236/smithChartSlidesFig4}{Single stub tuning example}{fig:smithChartSlides:smithChartSlidesFig4}{0.5}
+\imageFigure{../figures/ece1236-microwaves/smithChartSlidesFig4}{Single stub tuning example}{fig:smithChartSlides:smithChartSlidesFig4}{0.5}
 
 \begin{enumerate}
 \item Plot the load on the Smith Chart.
