--- a/uwavesproblemSet1Problem4.tex
+++ b/uwavesproblemSet1Problem4.tex
@@ -42,7 +42,7 @@ in \( \si{dB/m} \) when \( d = 1 \si{cm}, 1 \si{mm} \) and \( 1 \mu \si{m} \).
 
 To get some quick results, the transmission line can be treated as a large parallel plate capacitor.  First recall that for a single plate with linear charge density \( +(Q/l) \) on it, the electric field is normal and outwards from the plate as in sketched in \cref{fig:ps1p4:ps1p4Fig1}.
 
-\imageFigure{../../figures/ece1236/ps1p4Fig1}{Electric field between two plates}{fig:ps1p4:ps1p4Fig1}{0.2}
+\imageFigure{../figures/ece1236-microwaves/ps1p4Fig1}{Electric field between two plates}{fig:ps1p4:ps1p4Fig1}{0.2}
 
 Using a Gaussian volume the width of the plate we have
 
@@ -90,7 +90,7 @@ Here edge effects and charge distribution on the plates has been completely igno
 
 For the magnetic field the situation is similar.  Suppose the magnetic field is oriented as sketched in \cref{fig:ps1p4:ps1p4Fig2}.
 
-\imageFigure{../../figures/ece1236/ps1p4Fig2}{Magnetic field and flux between two plates}{fig:ps1p4:ps1p4Fig2}{0.2}
+\imageFigure{../figures/ece1236-microwaves/ps1p4Fig2}{Magnetic field and flux between two plates}{fig:ps1p4:ps1p4Fig2}{0.2}
 
 Integrating over the loop \( C \) that surrounds the top plate we have
 
@@ -156,7 +156,7 @@ Z_0
 
 Referring to \cref{fig:ps1p4:ps1p4Fig3}, the RF resistance can be to the effective area that the field acts on.
 
-\imageFigure{../../figures/ece1236/ps1p4Fig3}{Skin depth for parallel waveguide.}{fig:ps1p4:ps1p4Fig3}{0.15}
+\imageFigure{../figures/ece1236-microwaves/ps1p4Fig3}{Skin depth for parallel waveguide.}{fig:ps1p4:ps1p4Fig3}{0.15}
 
 The resistance per plate in a length \( l \) is
 
