--- a/uwavesDeck1MaxwellsCore.tex
+++ b/uwavesDeck1MaxwellsCore.tex
@@ -8,7 +8,7 @@
 
 For the integration surface sketched in \cref{fig:deck1Maxwells:deck1MaxwellsFig1} Faraday's law is
 
-\imageFigure{../../figures/ece1236/deck1MaxwellsFig1}{Stokes integration surface}{fig:deck1Maxwells:deck1MaxwellsFig1}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck1MaxwellsFig1}{Stokes integration surface}{fig:deck1Maxwells:deck1MaxwellsFig1}{0.2}
 
 \begin{dmath}\label{eqn:uwavesLecture1:20}
 \int_\txtC \BE \cdot d\Bl = - \PD{t}{} \iint_\txtS \BB \cdot \ncap dS
@@ -39,7 +39,7 @@ On the RHS we have the sum of the conduction and displacement currents respectiv
 
 Consider a closed surface S with interior volume V, as sketched in \cref{fig:deck1Maxwells:deck1MaxwellsFig2}.  The charge conservation relation is
 
-\imageFigure{../../figures/ece1236/deck1MaxwellsFig2}{Divergence theorem integration volume}{fig:deck1Maxwells:deck1MaxwellsFig2}{0.2}
+\imageFigure{../figures/ece1236-microwaves/deck1MaxwellsFig2}{Divergence theorem integration volume}{fig:deck1Maxwells:deck1MaxwellsFig2}{0.2}
 
 \begin{dmath}\label{eqn:uwavesLecture1:60}
 \oiint \BJ \cdot \ncap dS = -\PD{t}{} \int \rho dV
