classicthesis-config.tex tweak

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -364,3 +364,5 @@ END-REDACTION%
 %\PassOptionsToPackage{answerdelayed}{exercise}
 \usepackage{peeters_layout}
 \usepackage{thisbook}
+
+\myClassicThesisOverrides
