- switch to 6x9 format. - Add spellcheck rules.

--- a/FrontBackmatter/preface.tex
+++ b/FrontBackmatter/preface.tex
@@ -7,14 +7,12 @@
 %\chapter{Preface}
 % this suppresses an explicit chapter number for the preface.
 \chapter*{Preface}%\normalsize
+  \thispagestyle{empty}
   \addcontentsline{toc}{chapter}{Preface}
 
 This document was produced while taking the Spring 2016, University of Toronto Microwave and Millimeter-Wave Techniques (aka Microwave Circuits) course (ECE1236H), taught by Prof.\ G. V. Eleftheriades.
-
 \paragraph{Course Syllabus}
-
 This course outlines the principles of designing modern microwave and RF circuits.
-
 \begin{itemize}
 \item Signal-integrity issues in high-speed digital circuits.
 \item The wave equation.
@@ -33,7 +31,6 @@ This course outlines the principles of designing modern microwave and RF circuit
 \end{itemize}
 
 The text for this course was \citep{pozar2009microwave}.  It was not a required text, and the course was taught off of slides.
-
 \withproblemsetsMessage{
 \textcolor{Maroon}{
 \textit{THIS DOCUMENT IS REDACTED.  THE PROBLEM SET SOLUTIONS AND ASSOCIATED MATHEMATICA CODE IS NOT VISIBLE.  PLEASE EMAIL ME FOR THE FULL VERSION IF YOU ARE NOT TAKING ECE1236.}
@@ -41,12 +38,10 @@ The text for this course was \citep{pozar2009microwave}.  It was not a required 
 }
 
 \paragraph{This document contains:}
-
 \begin{itemize}
 \item Lecture notes (or transcriptions from the class slides when they went too fast).
 \item Personal notes exploring auxiliary details.
 \item Worked practice problems.
-
 \ifthenelse{\boolean{redacted}}%
 {%
 \item Links to Matlab, Mathematica, and Julia notebooks associated with the course material and problems (but not problem sets).
@@ -59,4 +54,4 @@ The text for this course was \citep{pozar2009microwave}.  It was not a required 
 
 My thanks go to Professor Eleftheriades for teaching this course.
 
-Peeter Joot  \quad peeterjoot@protonmail.com
+Peeter Joot  \quad peeterjoot@pm.me
