--- a/appendixchapters.tex
+++ b/appendixchapters.tex
@@ -2,15 +2,13 @@
 % Copyright © 2015 Peeter Joot.  All Rights Reserved.
 % Licenced as described in the file LICENSE under the root directory of this GIT repository.
 %
-\chapter{Useful formulas and review}
+\mychapter{Useful formulas and review.}
    \input{usefulFormulas.tex}
-
-\chapter{Odds and ends}
+\mychapter{Odds and ends.}
    \input{averagePowerCircuitElements.tex}
-
-\chapter{Mathematica notebooks}
+\mychapter{Mathematica notebooks.}
    \input{mathematica.tex}
-\chapter{Matlab notebooks}
+\mychapter{Matlab notebooks.}
    \input{matlab.tex}
-\chapter{Julia notebooks}
+\mychapter{Julia notebooks.}
    \input{julia.tex}
