--- a/uwavesDeck8ResonatorQfactorCore.tex
+++ b/uwavesDeck8ResonatorQfactorCore.tex
@@ -188,7 +188,7 @@ Q_\txtp = \frac{R_L}{G} = \frac{R}{\omega L}
 \paragraph{Plot of constant \( Q = X/R \) contours (circular arcs) on the Smith Chart}
 \index{Smith chart!constant contours}
 
-Referrring to
+Referring to
 
 F12
 
@@ -372,7 +372,7 @@ Now on the RHP there are no singularities, so on a contour considering of the im
 } d\omega
 \end{dmath}
 
-Now on the frequency asxes ( \( j \omega \) )
+Now on the frequency axes ( \( j \omega \) )
 
 \Abs{\frac{s - a_1}{s+ a_1}} =
 \Abs{\frac{j\omega - a_1}{j \omega+ a_1}} = 1
@@ -382,7 +382,7 @@ if \( a_1 \) is real.
 
 ...
 
-Hense on the \( s = j \omega \) axis the integrant becomes equal to
+Hence on the \( s = j \omega \) axis the integrand becomes equal to
 
 \begin{dmath}\label{eqn:uwavesDeck8ResonatorQfactorCore:n}
 j \int \ln \inv{\Abs{\Gamma}} d\omega
