--- a/uwavesproblemSet1Problem3.tex
+++ b/uwavesproblemSet1Problem3.tex
@@ -33,7 +33,7 @@ Determine the load \( Z_\txtL \).
 
 \makeSubAnswer{}{uwaves:problemSet1:3a}
 
-Because the current has a different sign in the superposition sum, the current min/max will be where there is a voltage max/min, so the first miniumum is at \( d = 9.7 \si{mm} \).
+Because the current has a different sign in the superposition sum, the current min/max will be where there is a voltage max/min, so the first minimum is at \( d = 9.7 \si{mm} \).
 
 Showing this explicitly, the current amplitude is
 \begin{dmath}\label{eqn:uwavesproblemSet1Problem3:180}
